# powerplan

./: .gitignore  .mcp.json  LICENSE  PLAN.md  PRD.md  README.md  powerplan_server.py  pyproject.toml
.github/workflows/: ci.yml  deploy-site.yml
powerplan/: __init__.py  __main__.py  discovery.py  mutations.py  plan_model.py  plan_parser.py  plan_writer.py  server.py  views.py
scripts/: recreate_plan.py
site/: index.html  package-lock.json  package.json  vite.config.ts
site/public/examples/: greenfield.md  history.md  mid-project.md
site/src/: App.tsx  index.css
site/src/components/: AgentStory.tsx  Examples.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Integration.tsx  Principles.tsx  Tools.tsx
tests/: __init__.py  test_mutations.py  test_roundtrip.py  test_v02_bootstrap.py
tests/fixtures/: powernote_PLAN.md  powerplanner_PLAN.md
